面试题积累

--- a/Spring/5.5.spring源码分析.md
+++ b/Spring/5.5.spring源码分析.md
@@ -426,7 +426,7 @@ public static void registerBeanDefinition(
 }
 ```
 
-由上可以看出``context.register(AppConfig.class);``这个方法,其实就是将类new成一个`beanDefinition`然后再通过`registry.registerBeanDefinition`的方法注册到`beanDefinitionMap`里面，其实``registry.registerBeanDefinition`就是一个map的put操作,不信？我们再往底层看。
+由上可以看出``context.register(AppConfig.class);``这个方法,其实就是将类new成一个`beanDefinition`然后再通过`registry.registerBeanDefinition`的方法注册到`beanDefinitionMap`里面，其实`registry.registerBeanDefinition`就是一个map的put操作,不信？我们再往底层看。
 
 定位到`GenericApplicationContext`
 
@@ -576,10 +576,11 @@ public void refresh() throws BeansException, IllegalStateException {
    }
    ```
    
+
 详细分析`beanFactory.addBeanPostProcessor(new ApplicationContextAwareProcessor(this));`这个方法
-   
+
 这个方法其实就是添加一个后置处理器，作用上面注释有写，但是前面是一个add操作，所以我们看下源码，这个方法在`AbstractBeanFactory`类里面。
-   
+
 ```java
    @Override
    public void addBeanPostProcessor(BeanPostProcessor beanPostProcessor) {
@@ -596,18 +597,18 @@ public void refresh() throws BeansException, IllegalStateException {
        // Add to end of list
        this.beanPostProcessors.add(beanPostProcessor);
    }
-   ```
-   
+```
+
 ```java
    private final List<BeanPostProcessor> beanPostProcessors = new CopyOnWriteArrayList<>();	
-   ```
-   
+```
+
 ```
    可见，beanFactory里面维护了一个list，list里面存储的是各种后置处理器。但是到这一步还没有用到，在bean的实例化过程中会循环这个list依次来执行者list里面的后置处理器，达到插手bean的实例化过程的目的。
-   ```
-   
+```
 
-   
+
+
 3. `invokeBeanFactoryPostProcessors(beanFactory);`
 
    ```java
@@ -806,9 +807,9 @@ public void refresh() throws BeansException, IllegalStateException {
 ````
    可见BeanDefinitionRegistryPostProcessor其实继承自BeanFactoryPostProcessor，可以猜想子类肯定比父类强大。
 ````
-   
+
    里面的一个重要的方法`invokeBeanDefinitionRegistryPostProcessors()`
-   
+
    ```java
    /***
    	循环所有的实现了BeanDefinitionRegistryPostProcessor接口的类，并调用它们的一个方法
@@ -825,7 +826,7 @@ public void refresh() throws BeansException, IllegalStateException {
    ```
 
    其实到这步就一个类进来，就是上面注释里面写的`ConfigurationClassPostProcessor`，所以我们继续看`ConfigurationClassPostProcessor#processConfigBeanDefinitions`，跳转到`processConfigBeanDefinitions`
-   
+
    ```java
    public void processConfigBeanDefinitions(BeanDefinitionRegistry registry) {
    // 定义一个list，存放项目里面提供的bd
@@ -941,15 +942,15 @@ public void refresh() throws BeansException, IllegalStateException {
       }
    }
    ```
-   
+
    看上面注释就知道这个方法很重要，下面列举一下：
-   
+
    1. 拿出所有的bdName，这儿有7个，6个spring默认注入，还有一个是我们的配置类
    2. 判断配置类是否加了`@Configuration`，如果加了就放进一个list里面，其实只要加了`@Compoent`元注解标注就会加进list里面让后面扫描，这儿有一个细节，如果加了`@Configuration`会在后面生成代理类。
    3. 解析配置类
-   
+
    继续来看这个方法`parser.parse(candidates);`
-   
+
    ```java
    public void parse(Set<BeanDefinitionHolder> configCandidates) {
       this.deferredImportSelectors = new LinkedList<>();
@@ -981,9 +982,9 @@ public void refresh() throws BeansException, IllegalStateException {
       processDeferredImportSelectors();
    }
    ```
-   
+
    继续下一步
-   
+
    ```java
    // 解析@Configuration的类
    	protected void processConfigurationClass(ConfigurationClass configClass) throws IOException {
@@ -1020,9 +1021,9 @@ public void refresh() throws BeansException, IllegalStateException {
    		this.configurationClasses.put(configClass, configClass);
    	}
    ```
-   
+
    `sourceClass = doProcessConfigurationClass(configClass, sourceClass);`
-   
+
    ```java
    protected final SourceClass doProcessConfigurationClass(ConfigurationClass configClass, SourceClass sourceClass)
          throws IOException {
@@ -1108,7 +1109,7 @@ public void refresh() throws BeansException, IllegalStateException {
       return null;
    }
    ```
-   
+
    1. 可以看到在代码的上半部分处理的是`@ComponentScan`的注解，我们先来看这个方法`Set<BeanDefinitionHolder> scannedBeanDefinitions =
                      this.componentScanParser.parse(componentScan, `里面发生了什么
    
@@ -1217,16 +1218,16 @@ public void refresh() throws BeansException, IllegalStateException {
    2. 另一段代码是解析`@Import`注解，`@Import`里面可以注入3种类，`普通类`、`ImportSelector.class`、`ImportBeanDefinitionRegistar.class`我们先举个`ImportSelector.class`的例子
    
       1. 定义一个接口`Dao`
-   
+     
          ```java
          public interface Dao {
          
              public void sayHello();
          }
          ```
-   
+      
       2. 定义它的实现类`IndexDao`
-   
+     
          ```java
          @Component
          public class IndexDao implements Dao {
@@ -1236,9 +1237,9 @@ public void refresh() throws BeansException, IllegalStateException {
              };
          }
          ```
-   
+      
       3. 定义一个`ImportSelector`类
-   
+     
          ```java
          public class MyImportSelect implements ImportSelector {
              @Override
@@ -1247,9 +1248,9 @@ public void refresh() throws BeansException, IllegalStateException {
              }
          }
          ```
-   
+      
       4. 使用`BeanPostProcessor`生成代理
-   
+     
          ```java
          public class MyBeanPostProcessor implements BeanPostProcessor {
          
@@ -1262,9 +1263,9 @@ public void refresh() throws BeansException, IllegalStateException {
              }
          }
          ```
-   
+      
       5. 看一下代理逻辑
-   
+     
          ```java
          public class MyInvocationHandler implements InvocationHandler {
          
@@ -1281,9 +1282,9 @@ public void refresh() throws BeansException, IllegalStateException {
              }
          }
          ```
-   
+      
       6. 我们的配置类引入
-   
+     
          ```java
          @Configuration
          @Import(MyImportSelect.class)
@@ -1291,9 +1292,9 @@ public void refresh() throws BeansException, IllegalStateException {
          public class AppConfig {
          }
          ```
-   
+      
       7. 测试调用
-   
+     
          ```java
          public class App {
          
@@ -1307,24 +1308,25 @@ public void refresh() throws BeansException, IllegalStateException {
              }
          }
          ```
-   
+      
       8. 结果
-   
+     
          ````
          我被代理了
          Hello
          ````
-   
-      可见这么也可以把bean注入进去，这样我们可以在注入bean之前进行一些个逻辑判断，选择性的注入bean。`其实我们常说的IOC容器是DefaultSingletonBeanRegistry类里面的一个ConcurrentHashMap`。
-   
-      `private final Map<String, Object> singletonObjects = new ConcurrentHashMap<>(256);`
-   
-      狭义的说来就是这个`Map`，所以在Spring里面还有这么一个map，就是这个map来存储bean的单例`Instance`。
-   
-      其实这里只是演示了`ImportSelector`的作用，只是用了后置处理器`BeanPostProcessor`来干预bd实例化的过程（代理了一下）。
-   
-      至于Spring是怎么解析这个`ImportSelector`，其实还是反射。具体代码还是得细看。这个就不做描述了。
-   
+      
+      
+   可见这么也可以把bean注入进去，这样我们可以在注入bean之前进行一些个逻辑判断，选择性的注入bean。`其实我们常说的IOC容器是DefaultSingletonBeanRegistry类里面的一个ConcurrentHashMap`。
+      
+   `private final Map<String, Object> singletonObjects = new ConcurrentHashMap<>(256);`
+      
+   狭义的说来就是这个`Map`，所以在Spring里面还有这么一个map，就是这个map来存储bean的单例`Instance`。
+      
+   其实这里只是演示了`ImportSelector`的作用，只是用了后置处理器`BeanPostProcessor`来干预bd实例化的过程（代理了一下）。
+      
+   至于Spring是怎么解析这个`ImportSelector`，其实还是反射。具体代码还是得细看。这个就不做描述了。
+      
       剩下的内容请看下一个文档。
 
 ## 2、Spring的后置处理器
