--- a/jvm/2.类的加载机制.md
+++ b/jvm/2.类的加载机制.md
@@ -189,7 +189,7 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 便于我们分析
 
-![](./img/22.jpg)
+<img src="./img/22.jpg"  />
 
 + S0C：第一个Survivor区的空间
 + S1C：第二个Survivor区的空间
