--- a/微服务/微服务入门.md
+++ b/微服务/微服务入门.md
@@ -1,4 +1,4 @@
-微服务入门
+# 微服务入门
 
 ## 什么是微服务？
 
@@ -6,7 +6,9 @@
 
 ## 经典问题:微服务和分布式的区别
 
-谈到区别，我们先简单说一下分布式是什么，所谓分布式，就是将**偌大的系统划分为多个模块（这一点和微服务很像）部署到不同机器上（因为一台机器可能承受不了这么大的压力或者说一台非常好的服务器的成本可能够好几台普通的了），各个模块通过接口进行数据交互，其实 分布式也是一种微服务。 因为都是把模块拆分开来变为独立的单元，提供接口来调用**，那么 他们本质的区别在哪呢？ 他们的区别主要体现在“目标”上， 何为目标，就是你这样架构项目要做到的事情。 分布式的目标是什么？ 我们刚刚也看见了， 就是一台机器承受不了的，或者是成本问题， 不得不使用多台机器来完成服务的部署，而微服务的目标 只是让各个模块拆分开来，不会被互相影响，比如模块的升级亦或是出现BUG等等... 
+谈到区别，我们先简单说一下分布式是什么，所谓分布式，就是将**偌大的系统划分为多个模块（这一点和微服务很像）部署到不同机器上（因为一台机器可能承受不了这么大的压力或者说一台非常好的服务器的成本可能够好几台普通的了），各个模块通过接口进行数据交互，其实分布式也是一种微服务。 因为都是把模块拆分开来变为独立的单元，提供接口来调用**，那么他们本质的区别在哪呢？ 他们的区别主要体现在**目标**上。
+
+何为目标，就是你这样架构项目要做到的事情。 分布式的目标是什么？ 我们刚刚也看见了， 就是一台机器承受不了的，或者是成本问题， 不得不使用多台机器来完成服务的部署，而微服务的目标只是让各个模块拆分开来，不会被互相影响，比如模块的升级亦或是出现BUG等等... 
 
 
 
@@ -173,7 +175,7 @@ public class PowerController {
 
 ``{"msg":"","code":"200","data":{"msg":"hello","code":"200","data":{"power":"power"}}}``
 
-成功调用`px-power`的服务，不过使用`http://localhost:600/getPower`调用缺失404，甚是奇怪。
+成功调用`px-power`的服务，不过使用`http://localhost:6000/getPower`调用缺失404，甚是奇怪。换了个端口就好了。
 
 **那么如果我们的服务的并发量上去了怎么办？**
 
